@@ -168,6 +168,7 @@
     <Compile Include="core\StoredProcedure.cs" />
     <Compile Include="core\transaction.cs" />
     <Compile Include="core\UsageAdvisor.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Types\MetaData.cs" />
     <Compile Include="Types\MySqlBinary.cs" />
     <Compile Include="Types\MySqlBit.cs" />
@@ -223,9 +224,6 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <CustomToolNamespace>MySql.Data.MySqlClient</CustomToolNamespace>
     </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
